--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "[![Tests](https://github.com/yandex-praktikum/express-mesto-gha/actions/workflows/tests-13-sprint.yml/badge.svg)](https://github.com/yandex-praktikum/express-mesto-gha/actions/workflows/tests-13-sprint.yml) [![Tests](https://github.com/yandex-praktikum/express-mesto-gha/actions/workflows/tests-14-sprint.yml/badge.svg)](https://github.com/yandex-praktikum/express-mesto-gha/actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
   "main": "index.js",
   "scripts": {
-    "lint": "eslint .",
+    "lint": "npx eslint .",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/ValentinaYablochkina/express-mesto-gha.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Valentina Yablochkina",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ValentinaYablochkina/express-mesto-gha/issues"
