--- a/package.json
+++ b/package.json
@@ -20,14 +20,19 @@
   },
   "homepage": "https://github.com/ValentinaYablochkina/express-mesto-gha#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "celebrate": "^15.0.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.1",
-    "mongoose": "^5.13.14"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.14",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19",
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "nodemon": "^2.0.19"
   }
 }
